# helloworld-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: MyClass.cpp  MyClass.cpp.orig  MyClass.h  main.cpp
